<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LenDen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="re_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="new_user">New User Sign Up?</string>
    <string name="map_key">AIzaSyCa7IDId79mX5wO_FYy2rT80CR4kCUxFmQ</string>
    <string name="f_applicationId">409005055784537</string>
    <string name="font_myrid_pro">MyriadPro-Regular.otf</string>
    <string name="no_items_favourited">No Items Favourited</string>

</resources>