<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:vee="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="vee.HexWhale.LenDen.Login"
    tools:ignore="ContentDescription" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/signup_dp_mrg_tp"
        android:adjustViewBounds="true"
        android:src="@drawable/login_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/signup_mrgs"
        android:layout_marginTop="@dimen/signup_mrg_top"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <RelativeLayout
            android:id="@+id/login_lyt_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_mrgs"
            android:layout_marginRight="@dimen/login_right_mrgs"
            android:layout_marginTop="@dimen/signup_et_mrg_tp"
            android:background="@drawable/login_edittext_uname" >

            <ImageView
                android:id="@+id/iv_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/name" />

            <vee.HexWhale.LenDen.aUI.CustomFontEditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/signup_et_mrg_lt_rt"
                android:layout_marginRight="@dimen/signup_et_mrg_lt_rt"
                android:layout_toRightOf="@+id/iv_n"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/signup_et_min_ht"
                android:paddingRight="50dp"
                android:singleLine="true"
                vee:veeTypeface="@string/font_myrid_pro" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_lyt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_lyt_uname"
            android:layout_marginLeft="@dimen/signup_mrgs"
            android:layout_marginRight="@dimen/login_right_mrgs"
            android:layout_marginTop="@dimen/signup_et_mrg_tp"
            android:background="@drawable/login_edittext_psw" >

            <ImageView
                android:id="@+id/iv_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/signup_password" />

            <vee.HexWhale.LenDen.aUI.CustomFontEditText
                android:id="@+id/login_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/signup_et_mrg_lt_rt"
                android:layout_marginRight="@dimen/signup_et_mrg_lt_rt"
                android:layout_toRightOf="@+id/iv_un"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="@dimen/signup_et_min_ht"
                android:paddingRight="50dp"
                android:singleLine="true"
                vee:veeTypeface="@string/font_myrid_pro" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/login_lyt_uname"
            android:layout_centerVertical="true"
            android:onClick="Signin"
            android:paddingBottom="@dimen/signup_et_mrg_tp"
            android:src="@drawable/login_edittext_ok" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/signup_mrgs"
        android:layout_marginRight="@dimen/signup_mrgs"
        android:layout_marginTop="@dimen/signup_mrg_top"
        android:orientation="horizontal"
        android:paddingRight="30dp"
        android:weightSum="7" >

        <vee.HexWhale.LenDen.aUI.CustomFontTextView
            android:id="@+id/login_forgot_psw"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center|left"
            android:onClick="FrgotPassword"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt"
            vee:veeTypeface="@string/font_myrid_pro" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/login_txt_gap"
            android:paddingRight="@dimen/login_txt_gap"
            android:src="@drawable/login_edittext_divider" />

        <vee.HexWhale.LenDen.aUI.CustomFontTextView
            android:id="@+id/login_new_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center|right"
            android:onClick="SignUp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/new_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_txt"
            vee:veeTypeface="@string/font_myrid_pro" />
    </LinearLayout>

</LinearLayout>